Fri Aug 22 00:44:14 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/lemon.c,queryparser/queryparser.lt: Merge upstream
	  "Check-in Number: 5488" and "5563".
	* queryparser/queryparser.lt: Fix compilation for previous merge
	  (I fixed it in the generated file before!)

Fri Aug 22 00:07:22 GMT 2008  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lt: Merge upstream "Check-in Number: 5472".

Thu Aug 21 04:15:41 GMT 2008  Olly Betts <olly@survex.com>

	* configure.ac: Remove code which checks for --enable-debug and
	  --enable-debug-verbose (deprecated since 1.0.0) and gives an error
	  pointing to the replacements.
	* docs/deprecation.rst: Document the replacements here.

Thu Aug 21 00:57:52 GMT 2008  Olly Betts <olly@survex.com>

	* common/omdebug.h: Remove DEBUGLINE completely.
	* backends/flint/flint_table.cc,backends/inmemory/inmemory_database.cc,
	  queryparser/queryparser.lt: Replace remaining DEBUGLINE uses.
	* backends/inmemory/inmemory_database.cc: Don't need <list>.

Thu Aug 21 00:37:08 GMT 2008  Olly Betts <olly@survex.com>

	* common/debuglog.h,common/omdebug.h: Define LOGLINE, etc to no-op
	  versions when XAPIAN_DEBUG_VERBOSE isn't defined.
	* api/,backends/chert/,backends/flint/,
	  backends/inmemory/inmemory_database.cc,
	  backends/multi/multi_postlist.cc,backends/multi/multi_termlist.cc,
	  expand/esetinternal.cc,expand/expandweight.cc,matcher/,
	  net/remoteconnection.cc: Use LOGLINE or LOGVALUE instead of
	  DEBUGLINE.

Wed Aug 20 13:33:56 GMT 2008  Olly Betts <olly@survex.com>

	* common/debuglog.h: Don't need omtime.h.

Wed Aug 20 06:11:31 GMT 2008  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix to catch QueryParserError instead of const
	  char * which Xapian < 1.0.0 threw instead.

Wed Aug 20 05:50:26 GMT 2008  Olly Betts <olly@survex.com>

	* docs/valueranges.rst: Expand on some sections.

Wed Aug 20 04:43:07 GMT 2008  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Clarify in comments that this affected 1.0.7.
