@@ -1,3 +1,7 @@
+Fri Aug 22 00:55:26 GMT 2008  Olly Betts <olly@survex.com>
+
+	* queryparser/lemon.c: Merge upstream "Check-in Number: 5564".
+
 Fri Aug 22 00:44:14 GMT 2008  Olly Betts <olly@survex.com>
 
 	* queryparser/lemon.c,queryparser/queryparser.lt: Merge upstream
